# walicord

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  Cargo.toml  GEMINI.md  LICENSE  README.md  clippy.toml  opencode.json  rustfmt.toml
.agents/skills/commit/: SKILL.md
.agents/skills/test-strategy/: SKILL.md
.github/workflows/: ci.yml  release.yml
.serena/memories/: code_structure.md  commands.md  project_purpose.md  style_and_conventions.md  tech_stack.md
docs/: setup.md  usage.md
docs/design/: button-ledger-ui.md  discord-ledger-ui-poc.md  ledger-event-replay.md  settlement-mathematics.md  transaction-construction.md
walicord/: CHANGELOG.md  Cargo.toml
walicord-application/: Cargo.toml
walicord-application/src/: command_syntax.rs  error.rs  lib.rs  message_processor.rs  model.rs  ports.rs  receipt.rs  role_visibility.rs  settle_up.rs
walicord-application/src/ledger/: correction.rs  entry.rs  hash_chain.rs  load.rs  mod.rs  seal.rs  tests.rs
walicord-application/tests/: balance_calculator.rs  balance_calculator_proptest.rs
walicord-calc/: Cargo.toml
walicord-calc/src/: lib.rs  model.rs
walicord-core/: Cargo.toml
walicord-core/src/: i18n.rs  lib.rs
walicord-core/src/application/: message_processor.rs  mod.rs  svg_table.rs
walicord-core/src/domain/: mod.rs  model.rs  services.rs
walicord-core/src/domain/services/: mod.rs  settlement_calculator.rs
walicord-core/src/infrastructure/: parser.rs
walicord-domain/: Cargo.toml
walicord-domain/src/: lib.rs  model.rs
walicord-domain/src/model/: balance_accumulator_impl.rs  settlement_support.rs
walicord-domain/src/services/: member_set_resolver.rs  mod.rs  settle_up_policy.rs  settlement_calculator.rs  settlement_rounding.rs  transfer_constructor.rs
walicord-domain/tests/: balance_calculator.rs
walicord-i18n/: Cargo.toml
walicord-i18n/src/: lib.rs
walicord-infrastructure/: Cargo.toml
walicord-infrastructure/src/: lib.rs  ocr.rs  optimizer.rs  parser.rs  settlement_planner.rs
walicord-interpreter/: Cargo.toml  example_ja.walicord
walicord-interpreter/src/: main.rs
walicord-ledger/: Cargo.toml
walicord-ledger/src/: adjustment.rs  error.rs  event.rs  expense.rs  lib.rs  projection.rs  record.rs  settlement.rs  tests.rs  validation.rs
walicord-parser/: Cargo.toml
walicord-parser/src/: i18n.rs  lib.rs
walicord-presentation/: Cargo.toml
walicord-presentation/src/: error_presenter.rs  lib.rs  settlement_presenter.rs  svg_table.rs  test_fixtures.rs  variables_presenter.rs
walicord-presentation/tests/: settlement_presenter_integration.rs
walicord-presentation/tests/snapshots/: settlement_presenter_integration__integration_review_view_complex.snap  settlement_presenter_integration__integration_settleup_view_complex.snap
walicord-transfer-construction/: Cargo.toml
walicord-transfer-construction/src/: lib.rs  model.rs
walicord/src/: bootstrap.rs  channel.rs  handler.rs  main.rs  member_roster_provider.rs  message_cache.rs  reaction.rs  role_visibility_feedback.rs  settlement.rs  test_utils.rs
walicord/src/application/: message_processor.rs  mod.rs
walicord/src/discord/: ledger.rs  mod.rs  ports.rs  roster.rs  service.rs  svg_renderer.rs
walicord/src/domain/: error.rs  model.rs  services.rs
walicord/src/infrastructure/: discord.rs  mod.rs  parser.rs  svg_renderer.rs
walicord/src/snapshots/: walicord__settlement__tests__integration_review_view_from_resolver_and_ast.snap  walicord__settlement__tests__integration_settleup_view_from_resolver_and_ast.snap
walicord_core/: Cargo.toml
walicord_core/src/: lib.rs
walicord_core/src/application/: message_processor.rs
walicord_interpreter/: Cargo.toml  example.walicord
