[workspace]
members = [
    "walicord",
    "walicord-application",
    "walicord-transfer-construction",
    "walicord-domain",
    "walicord-i18n",
    "walicord-infrastructure",
    "walicord-parser",
    "walicord-presentation"
]
resolver = "3"

[workspace.package]
description = "Walicord - Discord bot for expense settlement"
version = "0.1.0"
license = "MIT"

[workspace.lints.clippy]
uninlined_format_args = "deny"
