[package]
name = "walicord-application"
version = "0.1.0"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
walicord-domain = { path = "../walicord-domain" }

[dev-dependencies]
proptest = "1.10.0"
rstest = "0.26.1"
rust_decimal = "1.36.0"
walicord-infrastructure = { path = "../walicord-infrastructure" }