[package]
name = "walicord-core"
version = "0.1.0"
edition = "2024"

[dependencies]
walicord-calc = { path = "../walicord-calc" }
walicord-parser = { path = "../walicord-parser" }

[dev-dependencies]
rstest = "0.26.1"

[features]
default = ["microlp", "ja"]
microlp = ["walicord-calc/microlp"]
coin_cbc = ["walicord-calc/coin_cbc"]
ja = ["walicord-parser/ja"]
en = ["walicord-parser/en"]