[package]
name = "walicord-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
rust_decimal = "1.36.0"
sha2 = "0.10.9"
smallvec = "1.15.1"
smol_str = "0.3.5"
tracing = "0.1.41"
walicord-transfer-construction = { path = "../walicord-transfer-construction" }

[dev-dependencies]
proptest = "1.6.0"
rstest = "0.26.1"
