[package]
name = "walicord-infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
walicord-application = { path = "../walicord-application" }
walicord-domain = { path = "../walicord-domain" }
walicord-parser = { path = "../walicord-parser" }
walicord-calc = { path = "../walicord-calc" }

[dev-dependencies]
proptest = "1.9.0"
rstest = "0.26.1"

[features]
default = ["microlp", "ja"]
microlp = ["walicord-calc/microlp"]
coin_cbc = ["walicord-calc/coin_cbc"]
ja = ["walicord-parser/ja"]
en = ["walicord-parser/en"]
