[package]
name = "walicord-infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
walicord-application = { path = "../walicord-application" }
walicord-domain = { path = "../walicord-domain" }
walicord-parser = { path = "../walicord-parser" }
walicord-transfer-construction = { path = "../walicord-transfer-construction", default-features = false }

[dev-dependencies]
proptest = "1.9.0"
rstest = "0.26.1"

[features]
default = ["ja"]
highs = ["walicord-transfer-construction/highs"]
coin_cbc = ["walicord-transfer-construction/coin_cbc"]
ja = ["walicord-parser/ja"]
en = ["walicord-parser/en"]
