[package]
name = "walicord-transfer-construction"
version = "0.1.0"
edition = "2024"

[dependencies]
good_lp = { version = "1.14.0", default-features = false }
thiserror = "2.0.17"

[dev-dependencies]
proptest = "1.9.0"
rstest = "0.26.1"

[features]
default = ["highs"]
coin_cbc = ["good_lp/coin_cbc"]
highs = ["good_lp/highs"]
