[package]
name = "walicord"
version = "0.1.0"
edition = "2024"

[dependencies]
walicord-parser = { path = "../walicord-parser" }
walicord-core = { path = "../walicord-core" }
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
indexmap = "2.12.0"
thiserror = "2.0.17"
resvg = "0.45"
tiny-skia = "0.11"

[features]
default = ["microlp", "ja"]
microlp = ["walicord-core/microlp"]
coin_cbc = ["walicord-core/coin_cbc"]
ja = ["walicord-core/ja"]
en = ["walicord-core/en"]