[package]
name = "walicord"
version = "0.1.0"
edition = "2024"

[dependencies]
walicord-application = { path = "../walicord-application" }
walicord-domain = { path = "../walicord-domain" }
walicord-infrastructure = { path = "../walicord-infrastructure" }
walicord-i18n = { path = "../walicord-i18n" }
walicord-parser = { path = "../walicord-parser" }
walicord-presentation = { path = "../walicord-presentation" }
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
indexmap = "2.12.0"
thiserror = "2.0.17"
resvg = "0.46"

[features]
default = ["microlp", "ja"]
microlp = ["walicord-infrastructure/microlp"]
coin_cbc = ["walicord-infrastructure/coin_cbc"]
ja = ["walicord-infrastructure/ja", "walicord-i18n/ja", "walicord-parser/ja"]
en = ["walicord-infrastructure/en", "walicord-i18n/en", "walicord-parser/en"]
