[package]
name = "walicord"
version = "2.0.0"
edition = "2024"
license = "MIT"

[dependencies]
walicord-application = { path = "../walicord-application" }
walicord-domain = { path = "../walicord-domain" }
walicord-infrastructure = { path = "../walicord-infrastructure", default-features = false }
walicord-i18n = { path = "../walicord-i18n" }
walicord-parser = { path = "../walicord-parser" }
walicord-presentation = { path = "../walicord-presentation" }
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
indexmap = "2.12.0"
thiserror = "2.0.17"
resvg = "0.45"
tiny-skia = "0.11"
futures = "0.3.31"
smallvec = "1.15.1"
arcstr = "1.2.0"
smol_str = "0.3.5"

[dev-dependencies]
rstest = "0.26.1"
serde_json = "1.0"

[features]
default = ["ja"]
ja = ["walicord-infrastructure/ja", "walicord-i18n/ja", "walicord-parser/ja"]
en = ["walicord-infrastructure/en", "walicord-i18n/en", "walicord-parser/en"]
